# othello

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  TODO.md  main.py  pyproject.toml
ai/: levels.py  minimax.py  scorer.py
docs/: ARCHITECTURE.md  CHANGELOG.md  CODE_STRUCTURE.md  ISSUES.md  REQUIREMENTS.md
game/: board.py  game.py  rules.py
tests/ai/: test_levels.py  test_minimax.py  test_scorer.py
tests/game/: test_board.py  test_game.py  test_rules.py
ui/: board_widget.py  computer_worker.py  game_window.py  launch_window.py  side_panel.py
