[project]
name = "othello"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyside6>=6.10.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "RUF", "PT"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F401"]  # unused imports are expected in stubs
"ui/**/*.py" = ["F401"]  # unused imports are expected in stubs
