[project]
name = "othello"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyside6>=6.10.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.7",
]

[tool.pytest.ini_options]
addopts = "--cov=game --cov=ai --cov=ui --cov=main"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "RUF", "PT", "SIM", "A", "ARG", "PIE", "T20"]

